packages/components/src/components/select/select.scss
@use "sass:map";
@use "@db-ux/core-foundations/build/styles/variables";
@use "@db-ux/core-foundations/build/styles/colors";
@use "@db-ux/core-foundations/build/styles/icons";
@use "@db-ux/core-foundations/build/styles/fonts";
@use "../../styles/internal/form-components";
@use "../../styles/internal/component";
@use "../../styles/internal/select-components";

.db-select-placeholder {
	@extend %select-absolute-placeholder;
}

.db-select {
	--db-form-component-padding-inline-end: #{select-components.$select-icon-padding};
	--db-form-component-min-inline-size: #{variables.$db-sizing-xl};

	// shared from form-components
	@extend %select-icon;
	@extend %select-placeholder;
	@include form-components.set-default-form-component(select);

	// increased inline size for elements with icons
	&[data-icon]:not([data-show-icon="false"]) {
		--db-form-component-min-inline-size: #{variables.$db-sizing-2xl};
	}

	select {
		text-indent: select-components.$has-before-padding;
	}

	&[data-hide-label="true"] {
		--db-label-visible-height: 0;
		--db-label-visible-spacing: 1;
	}

	// Most likely this wouldn't work on MacOS, but we're still progressively enhancing Windows by this
	option {
		background-color: colors.$db-adaptive-bg-basic-level-1-default;
		color: colors.$db-adaptive-on-bg-basic-emphasis-100-default;
	}

	optgroup {
		background-color: colors.$db-adaptive-bg-basic-level-3-default;
	}

	select:is(:has(option:checked:not(.placeholder)), :open) {
		& ~ [id$="-placeholder"],
		// Hide the placeholder and an inserted empty `option` with
		// `data-show-empty-option="false"` once a non-placeholder option is selected or the `select` is open
		option[data-show-empty-option="false"] {
			display: none;
		}
	}
}

